@@ -1,4 +1,4 @@
-personal_ws-1.1 en 3421 utf-8
+personal_ws-1.1 en 3422 utf-8
 AAC
 AAS
 ABI
@@ -2661,6 +2661,7 @@ oldmge
 oldnut
 omnios
 onbatt
+onbattery
 onbattwarn
 onclick
 ondelay
